# grok-search-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/grok_search_mcp/: __init__.py  config.py  main.py  server.py  xai_service.py
